Fix Spring Security session authentication